Fix media query for footer alignment

--- a/_patterns/footer/footer.css
+++ b/_patterns/footer/footer.css
@@ -29,7 +29,7 @@
 
 @media only screen and (min-width: 60em) {
 
-  .tl-mq {
+  .tl-mq-f {
     text-align: left;
   }
 
